trunk/OldArchive/653b0eb28a15e77dcdf6778eb4f94043-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In constructor ‘foo::Foo::Foo(const Foo&)’:
main.cpp:7:34: error: request for member ‘x’ in ‘o’, which is of non-class type ‘const Foo {aka const int}’
     Foo( foo::Foo const& o ):x(o.x) {}
                                  ^
